--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,8 +8,8 @@
 
   <!-- Bootstrap CSS -->
 
-  <link rel="stylesheet" href="css/platzi-overflow.css" />
-  <link rel="stylesheet" href="css/custom.css" />
+  <link rel="stylesheet" href="assets/css/platzi-overflow.css" />
+  <link rel="stylesheet" href="assets/css/custom.css" />
 
   <title>PlatziOverflow - {{title}}</title>
 </head>
@@ -20,7 +20,7 @@
       <nav class="navbar navbar-expand-sm navbar-light bg-primary row align-items-center">
         <div class="container">
           <div class="col m-2">
-            <h1><a href="/"><img src="images/logo.png" style="max-height: 60px;"></a></h1>
+            <h1><a href="/"><img src="assets/images/logo.png" style="max-height: 60px;"></a></h1>
           </div>
           {{#if user}}
             <div class="col m-2 text-right">
@@ -45,7 +45,7 @@
 
   <footer class="footer swatch-900 mt-4">
     <div class="container">
-      <p class="text-center">Curso de hapi.js - <a href="https://platzi.com" target="blank"><img src="images/logo-platzi.png"
+      <p class="text-center">Curso de hapi.js - <a href="https://platzi.com" target="blank"><img src="assets/images/logo-platzi.png"
             class="small-logo" /></a> &copy; 2019</p>
     </div>
   </footer>
