--- a/views/register.hbs
+++ b/views/register.hbs
@@ -4,6 +4,16 @@
       <h3>Cree su cuenta</h3>
     </div>
     <div class="card-body">
+    {{#with error}}
+      <div class="alert alert-danger" role="alert">
+        {{this}}
+      </div>
+    {{/with}}
+    {{#with success}}
+      <div class="alert alert-success" role="alert">
+        {{this}}
+      </div>
+    {{/with}}
       <div class="row">
         <div class="col">
           <form method="POST" action="/create-user">
