--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,6 +4,11 @@
       <h3>Ingrese</h3>
     </div>
     <div class="card-body">
+      {{#with error}}
+        <div class="alert alert-danger" role="alert">
+          {{this}}
+        </div>
+      {{/with}}
       <div class="row">
         <div class="col">
           <form method="POST" action="/validate-user">
